# shopify-image-uploader

./: pyproject.toml
src/shopify_image_uploader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shopify_uploader/: uploader.py
